--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,7 +1,9 @@
 <section class="login">
   <div class="login__panel">
     <div class="login__header">
-      <img alt="Burst logo" class="login__logo" src="assets/images/logos/logo_blue.png"/>
+      <a [routerLink]="[ '' ]">
+        <img alt="Burst logo" class="login__logo" src="assets/images/logos/logo_blue.png"/>
+      </a>
       <small class="login__version">"Phoenix" Wallet ({{version}})</small>
     </div>
     <div class="login__body">
