--- a/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
@@ -1,9 +1,12 @@
 <h2>
-    Existing Account: Enter Passphrase
+    Enter your Passphrase
 </h2>
 <div class="passphrase-container">
-    <mat-form-field>
-        <input matInput type="text" placeholder="Passphrase" [(ngModel)]="passphrase">
-    </mat-form-field>
-    <button mat-raised-button (click)="setManualPassphrase(this.passphrase)">Next</button>
+  <mat-form-field class="input">
+     <input matInput type="text" placeholder="Passphrase" required [(ngModel)]="passphrase">
+     <mat-hint>Campo obrigatório</mat-hint>
+  </mat-form-field>
+</div>
+<div class="text-center navigation">
+  <button class="btn-success" mat-raised-button (click)="setManualPassphrase(this.passphrase)">Next</button>
 </div>
