--- a/web/angular-wallet/src/app/setup/account/create-active/record/record.component.scss
+++ b/web/angular-wallet/src/app/setup/account/create-active/record/record.component.scss
@@ -1,9 +1,23 @@
+.title {
+  margin: 0;
+}
+
+.table {
+  &__label {
+    font-weight: bold;
+  }
+  &__text {
+    font-weight: 100;
+  }
+}
+
 td {
     padding: 10px;
     text-align:left;
 }
 
 .copy-button {
+    box-shadow: none;
     min-width: 0px;
     line-height: 28px;
     padding: 0 10px;
