--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
@@ -1,15 +1,60 @@
-.login-passive {
-    height: 100%;
-    width: 100%;
-    background: #00579D;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+$media-querie-mobile: 0;
+$media-querie-tablet: 768px;
+$media-querie-desktop: 992px;
+$media-querie-screen:  1200px;
 
-    .content {
-        padding: 20px;
-        background: #fff;
-        border-radius: 20px;
+.signup {
+  &__background {
+    bottom: 5px;
+    opacity: .5;
+    position: absolute;
+    right: 0;
+    width: 25%;
+  }
+  &__header {
+    background: darken(#f9f9f9, 3%);
+    padding: 1rem;
+    text-align: center;
+  }
+  &__logo {
+    height: 30px;
+  }
+  &__container {
+      height: calc(100vh - 50px);
+      margin: 0 auto;
+      max-width: 720px;
+  }
+  &__title {
+    color: #333333;
+    font-weight: bold;
+    margin: 3rem 0;
+    position: relative;
+    @media screen and (min-width: $media-querie-mobile) {
+      font-size: 2rem;
+      margin-left: 3rem;
     }
+    @media screen and (min-width: $media-querie-tablet) {
+      font-size: 3.5rem;
+      margin-left: 0;
+    }
+    &::after {
+      background: #00579d;
+      bottom: -5px;
+      content: '';
+      display: inline-block;
+      height: 5px;
+      left: 0;
+      position: absolute;
+      width: 150px;
+    }
+  }
+}
+
+.legend {
+  font-size: 1.2rem;
+  margin-bottom: .5rem;
+}
+
+::ng-deep .field {
+  width: 100%;
 }
