Resolving some issues

--- a/web/angular-wallet/src/app/login/login-active/login-active.component.scss
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.scss
@@ -5,11 +5,14 @@ $media-querie-screen:  1200px;
 
 .signup {
   &__background {
+    background-image: url('/assets/images/backgrounds/signup-bg.jpg');
+    background-size: cover;
     bottom: 5px;
+    height: 300px;
     opacity: .5;
     position: absolute;
     right: 0;
-    width: 25%;
+    width: 380px;
   }
   &__header {
     background: darken(#f9f9f9, 3%);
