--- a/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
@@ -1,5 +1,5 @@
-<div>
-    <mat-form-field class="field">
+<div class="address-container">
+    <mat-form-field>
         <input
           matInput
           prefix="BURST-"
