--- a/web/angular-wallet/src/app/login/login-active/login-active.component.html
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.html
@@ -1,5 +1,5 @@
 <div class="signup">
-  <img alt="Burst logo" class="signup__background" src="assets/images/backgrounds/signup-bg.jpg"/>
+  <div class="signup__background"></div>
   <header class="signup__header">
       <a [routerLink]="[ '' ]">
         <img alt="Burst logo" class="signup__logo" src="assets/images/logos/logo_blue.png"/>
