--- a/web/angular-wallet/src/app/setup/account/create-active/create.component.scss
+++ b/web/angular-wallet/src/app/setup/account/create-active/create.component.scss
@@ -1,9 +1,9 @@
-::ng-deep .mat-step-header .mat-step-icon-state-number.mat-step-icon-selected,
-::ng-deep .mat-step-header .mat-step-icon-state-done,
-::ng-deep .mat-step-header .mat-step-icon-state-edit {
+:host .mat-step-header .mat-step-icon-state-number.mat-step-icon-selected,
+:host .mat-step-header .mat-step-icon-state-done,
+:host .mat-step-header .mat-step-icon-state-edit {
   background-color: #00579d;
 }
 
-::ng-deep .mat-horizontal-stepper-header.cdk-focused {
+:host .mat-horizontal-stepper-header.cdk-focused {
   background: none;
 }
