--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -28,7 +28,7 @@
 
         <div class="h3 username">{{ account.address }}</div>
         <div class="h5 email hint-text mt-8">{{ getAccountName() }}</div>
-        <div class="avatar-container fuse-navy-700"><img class="avatar" [src]="getQRCode(account.address)"></div>
+        <div class="avatar-container fuse-navy-700"><img class="avatar" [src]="accountQRCode"></div>
     </div>
 
     <div class="navbar-content">
