fix(toolbar): restore language selector

--- a/web/angular-wallet/src/app/app.component.html
+++ b/web/angular-wallet/src/app/app.component.html
@@ -8,4 +8,4 @@
 </ng-container>
 
 <notifier-container></notifier-container>
-<div *ngIf="isScanning" class="downloading">{{ 'downloading_blockchain' | i18n }}</div>
+<div  class="downloading">{{ 'downloading_blockchain' | i18n }}</div>
