--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -36,7 +36,7 @@
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
                 <button *ngFor="let account of accounts" mat-menu-item class="">
-                    <span *ngIf="account">{{account.alias || account.address}}</span>
+                    <span *ngIf="account" (click)="setAccount(account)">{{account.alias || account.address}}</span>
                 </button>
 
                 <button mat-menu-item class="" routerLink="/accounts">
