--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -24,11 +24,11 @@
 <div class="navbar-scroll-container" [ngClass]="fuseConfig.layout.navbar.primaryBackground"
      fusePerfectScrollbar [fusePerfectScrollbarOptions]="{suppressScrollX: true}">
 
-    <div *ngIf="account" class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
+    <div *ngIf="selectedAccount" class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-        <div class="h3 username">{{ account.address }}</div>
+        <div class="h3 username">{{ selectedAccount.address }}</div>
         <div class="h5 email hint-text mt-8">{{ getAccountName() }}</div>
-        <div class="avatar-container fuse-navy-700"><img class="avatar" [src]="accountQRCode"></div>
+        <div class="avatar-container fuse-navy-700"><img class="avatar" [src]="selectedAccountQRCode"></div>
     </div>
 
     <div class="navbar-content">
