feat(messages): wire up messages

--- a/web/angular-wallet/src/app/app.theme.scss
+++ b/web/angular-wallet/src/app/app.theme.scss
@@ -80,6 +80,7 @@ $typography: mat-typography-config(
 // Import app and page component themes here to enable theming for them
 @import "src/app/layout/components/chat-panel/chat-panel.theme";
 @import "src/app/layout/components/toolbar/toolbar.theme";
+@import "src/app/main/messages/messages.theme";
 
 // Define a mixin for easier access
 @mixin components-theme($theme) {
@@ -87,6 +88,7 @@ $typography: mat-typography-config(
     // Layout components
     @include chat-panel-theme($theme);
     @include toolbar-theme($theme);
+    @include messages-theme($theme);
 }
 
 // -----------------------------------------------------------------------------------------------------
