--- a/web/angular-wallet/src/app/main/main.component.html
+++ b/web/angular-wallet/src/app/main/main.component.html
@@ -17,12 +17,12 @@
 
 
 <!-- THEME OPTIONS PANEL -->
-<button mat-icon-button class="warn mat-elevation-z2 theme-options-button"
+<!-- <button mat-icon-button class="warn mat-elevation-z2 theme-options-button"
         (click)="toggleSidebarOpen('themeOptionsPanel')">
   <mat-icon>settings</mat-icon>
 </button>
 
 <fuse-sidebar name="themeOptionsPanel" class="theme-options-sidebar" position="right" [invisibleOverlay]="true">
   <fuse-theme-options></fuse-theme-options>
-</fuse-sidebar>
+</fuse-sidebar> -->
 <!-- / THEME OPTIONS PANEL -->
