--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
@@ -35,12 +35,7 @@
         </mat-grid-tile>
       </mat-grid-list>
 
-
-      <label class="pill">Suggested fee:</label>
-      Standard: <em (click)="setFee(fees.standard)">{{ convertFeeToBurst(fees.standard) }}</em>
-      Cheap: <em (click)="setFee(fees.cheap)">{{ convertFeeToBurst(fees.cheap) }}</em>
-      Priority: <em (click)="setFee(fees.priority)">{{ convertFeeToBurst(fees.priority) }}</em><br /><br />
-
+      <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
 
       <mat-form-field class="pin" appearance="outline">
         <input matInput [(ngModel)]="pin" name="pin" placeholder="Your PIN">
