feat(messages): add create new message flow

--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
@@ -16,8 +16,8 @@
                 <!-- / RESPONSIVE CHATS BUTTON-->
 
                 <!-- CHAT CONTACT-->
-                <div class="message-contact" fxLayout="row" fxLayoutAlign="start center"
-                    fuseMatSidenavToggler="message-right-sidenav" (click)="selectContact()">
+                <div *ngIf="!isNewMessage" class="message-contact" fxLayout="row" fxLayoutAlign="start center"
+                    fuseMatSidenavToggler="message-right-sidenav">
 
                     <div class="avatar-wrapper">
                         <!-- <img [src]="selectedMessageQRCode" class="avatar" /> -->
@@ -26,9 +26,17 @@
                     <div class="message-contact-name">
                         {{message.senderRS}}
                     </div>
-
                 </div>
                 <!-- / CHAT CONTACT-->
+
+                <div *ngIf="isNewMessage" class="message-contact-name-input">
+                    <mat-form-field floatLabel="never" appearance="standard">
+                        <input matInput prefix="BURST-"  burstInputValidator [patterns]="burstAddressPatternRef"
+                        mask="____-____-____-_____" [dropSpecialCharacters]="false" [showMaskTyped]="true"
+                        [(ngModel)]="message.senderRS" name="message.senderRS" placeholder="{{ 'recipient' | i18n }}">
+                    </mat-form-field>
+                </div>
+
             </div>
 
             <div>
