--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -22,7 +22,15 @@ fuse-sidebar {
                         .logo {
 
                             img {
-                                width: 100px;
+                                width: 40px;
+                            }
+
+                            .logo-unfolded {
+                                display:none;
+                            }
+
+                            .logo-folded {
+                                display:inline;
                             }
 
                         }
@@ -124,6 +132,9 @@ navbar {
             .logo {
                 display: flex;
                 align-items: center;
+                .logo-folded { 
+                    display:none;
+                }
 
                 img {
                     width: 100px;
