--- a/web/angular-wallet/src/app/main/accounts/delete-account-dialog/delete-account-dialog.component.html
+++ b/web/angular-wallet/src/app/main/accounts/delete-account-dialog/delete-account-dialog.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <p>Are you sure you want to delete these accounts?</p>
   <ul>
-    <li *ngFor="let account of selectedAccounts">{{account.address}}</li>
+    <li *ngFor="let account of selectedAccounts">{{account.accountRS}}</li>
   </ul>
 </div>
 <div mat-dialog-actions>
