--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -4,8 +4,8 @@
 
         <div class="widget auto-width" *ngIf="account">
             <strong>Example:</strong>
-            {{ account.address }}
-            {{ account.id }}
+            {{ account.accountRS }}
+            {{ account.account }}
         </div>
 
         <div class="mr-lg-32" fxFlex="100" *ngIf="account">
@@ -18,7 +18,7 @@
                             <div class="pr-16">
                                 <div class="h3 secondary-text">{{ 'balance' | i18n }}</div>
                                 <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
-                                    {{ account.balance }}
+                                    {{ convertNQTStringToNumber(account.balanceNQT) }}
                                 </div>
                             </div>
                         </div>
