--- a/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
@@ -13,5 +13,5 @@
           placeholder="{{ 'address' | i18n }}"
         >
         <mat-hint>Type your new burst address</mat-hint>
-    </mat-form-field> <i class="fa fa-lg fa-fw fa-arrow-right" (click)="submit(this.accountRS)"></i>
+    </mat-form-field> <i class="fa fa-lg fa-fw fa-arrow-right" (click)="submit(this.address)"></i>
 </div>
