feat(Account): add set account info page and API

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -146,6 +146,7 @@ navbar {
                 display: flex;
                 align-items: center;
             }
+
         }
 
         .navbar-scroll-container {
@@ -186,6 +187,13 @@ navbar {
                         margin: 0;
                         border-radius: 0;
                     }
+                }
+            }
+
+            .alias {
+                cursor: pointer;
+                &:hover {
+                    text-decoration: underline;
                 }
             }
 
