--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -28,7 +28,7 @@
 
         <div class="h3 username">{{ selectedAccount.accountRS }}</div>
         <div class="h5 alias hint-text mt-8"><span [routerLink]="['set-account-info']">{{ getAccountName() }}</span></div>
-        <div class="avatar-container fuse-navy-700"><img class="avatar" [src]="selectedAccountQRCode"></div>
+        <div class="avatar-container fuse-navy-700"><img class="avatar" [routerLink]="['request']" [src]="selectedAccountQRCode"></div>
     </div>
 
     <div class="navbar-content">
