added version tag to doc toolbar

--- a/lib/docstheme/default/layouts/default.hbs
+++ b/lib/docstheme/default/layouts/default.hbs
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<a href="https://https://github.com/burst-apps-team/phoenix/tree/master/lib" class="github-corner" aria-label="View source on GitHub">
+<a href="https://github.com/burst-apps-team/phoenix/tree/master/lib" class="github-corner" aria-label="View source on GitHub">
     <svg width="80" height="80" viewBox="0 0 250 250"
          style="fill:rgba(3, 155, 229, 0.90); color:#fff; position: absolute; top: 0; border: 0; left: 0; z-index: 2; transform: scale(-1, 1);"
          aria-hidden="true">
