--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -11,7 +11,13 @@ a {
 
 .tsd-page-toolbar {
     position: fixed;
-    box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.75);
+}
+
+.tsd-page-toolbar #tsd-npm-badge {
+    height: 24px;
+    position: absolute;
+    padding: 8px;
 }
 
 .github-corner {
