--- a/lib/docstheme/default/partials/header.hbs
+++ b/lib/docstheme/default/partials/header.hbs
@@ -14,6 +14,9 @@
                     </ul>
 
                     <a href="{{relativeURL "index.html"}}" class="title">{{project.name}}</a>
+                    <a href="https://www.npmjs.com/package/@burstjs/core">
+                        <img id="tsd-npm-badge" alt="npm" src="https://img.shields.io/npm/v/@burstjs/core.svg?style=for-the-badge">
+                    </a>
                 </div>
 
                 <div class="table-cell" id="tsd-widgets">
