Creating transaction tablet component to use in transaction list and dashboard

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -2,12 +2,6 @@
 
     <div class="content">
 
-        <div class="widget auto-width" *ngIf="account">
-            <strong>Example:</strong>
-            {{ account.accountRS }}
-            {{ account.account }}
-        </div>
-
         <div class="mr-lg-32" fxFlex="100" *ngIf="account">
 
             <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
@@ -29,19 +23,6 @@
                     <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
                         <div class="p-16" fxLayout="row wrap" fxLayoutAlign="start end">
                             <div class="pr-16">
-                                <div class="h3 secondary-text">{{ 'forged_balance' | i18n }}</div>
-                                <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
-                                    420
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="widget" fxFlex="100" fxFlex.gt-sm="30" fxFlex.gt-md="25">
-                    <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
-                        <div class="p-16" fxLayout="row wrap" fxLayoutAlign="start end">
-                            <div class="pr-16">
                                 <div class="h3 secondary-text">{{ 'assets_owned' | i18n }}</div>
                                 <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
                                     120
@@ -52,15 +33,17 @@
                 </div>
 
             </div>
-            
+
             <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
                 <div class="widget" fxFlex="100" fxFlex.gt-sm="50">
                     <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
-                        <div class="p-16" fxLayout="row wrap" fxLayoutAlign="start end">
-                            <div class="pr-16">
-                                <div class="h3 secondary-text">{{ 'recent_transactions' | i18n }}</div>
-                                Table goes here
-                            </div>
+                        <div class="p-16" fxLayout="column wrap" fxLayoutAlign="start">
+                          <div class="h3 secondary-text">{{ 'recent_transactions' | i18n }}</div>
+                          <app-transaction-table
+                            [displayedColumns]="['transaction_id', 'attachment', 'timestamp', 'type', 'amount', 'account']"
+                            [dataSource]="dataSource"
+                            [paginationEnabled]="false"
+                          ></app-transaction-table>
                         </div>
                     </div>
                 </div>
