--- a/web/angular-wallet/src/app/main/transactions/transactions.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transactions.component.html
@@ -43,78 +43,6 @@
             </div>
         </div>
 
-        <mat-table #table [dataSource]="dataSource" matSort>
-
-            <ng-container matColumnDef="transaction_id">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'transaction_id' | i18n }}</mat-header-cell>
-                <mat-cell *matCellDef="let transaction">
-                    <a [routerLink]="['/transactions/transaction', transaction.transaction]">{{ transaction.transaction }}</a>
-                </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="attachment">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>
-                    <mat-icon>mail</mat-icon>
-                </mat-header-cell>
-                <mat-cell *matCellDef="let transaction">
-                    <span *ngIf="transaction.attachment">
-                        <mat-icon>mail</mat-icon>
-                    </span>
-                </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="timestamp">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>
-                    <mat-icon>schedule</mat-icon>&nbsp;Date
-                </mat-header-cell>
-                <mat-cell *matCellDef="let transaction"
-                    title="{{convertTimestamp(transaction.timestamp) | date:'MMM d, y, h:mm:ss'}}">
-                    {{convertTimestamp(transaction.timestamp) | timeAgo}}
-                </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="type">
-                <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
-                <mat-cell *matCellDef="let transaction">
-                    {{ getTransactionNameFromType(transaction, account) | i18n }}
-                </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="amount">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>
-                    <mat-icon>local_atm</mat-icon>&nbsp;{{ 'amount' | i18n }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let transaction"> {{ convertNQTStringToNumber(transaction.amountNQT) | number : '1.0-8' }}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="fee">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>
-                    <mat-icon>compare_arrows</mat-icon>&nbsp;{{ 'fee' | i18n }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let transaction"> {{ convertNQTStringToNumber(transaction.feeNQT) | number : '1.0-8'}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="account">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>
-                    <mat-icon>account_box</mat-icon>&nbsp;{{ 'account' | i18n }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let transaction">
-                    <span *ngIf="isOwnAccount(transaction.senderRS)">{{transaction.recipientRS}}</span>
-                    <span *ngIf="!isOwnAccount(transaction.senderRS)">{{transaction.senderRS}}</span>
-                </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="confirmations">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'confirmations' | i18n }}</mat-header-cell>
-                <mat-cell *matCellDef="let transaction">
-                    <span *ngIf="transaction.confirmations">{{transaction.confirmations}}</span>
-                </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-        <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
-        </mat-paginator>
+        <app-transaction-table [dataSource]="dataSource"></app-transaction-table>
     </div>
 </div>
